# TP-Final-FCG

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: demo.yml
src/: CMakeLists.txt  main.cpp  triangulation.h  vertex.h
web/: BoxDrawer.js  FCG.js  Matrix.js  Mesh.js  Renderer.js  Shader.js  WebWorker.js  index.html
